--- a/styles.css
+++ b/styles.css
@@ -40,12 +40,60 @@
     border: white solid 1px;
     border-radius: 100%;
 }
-.hero__section__logo{
-    width: 200px;
+.content__herosection{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 32px;
+    height: calc(60vh - 60px);
 }
+.hero__section__logo{
+    width: 200px;
+    /* display: inline-block;
+    margin: 20px auto ; */
+    
+}
+.hreo_section_tittle{
+    text-align: center;
+    font-size: 30px;
+    font-weight: 400;
+    
+}
+.hero__section_input_container{
+    background-color: #fff;
+    display: flex;
+    padding: 10px;
+    border-radius:10px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    width: 50vw;
+    
+}
+.input_container_location,
+.input_container_search{
+    border: none ;
+    padding: 5px;
+    outline: none;
+}
+
+.input_container_search{
+    /* flex: 2; */
+    width: 65%;
+}
+.input_container_location{
+    width: 35%;
+    border-right: 2px solid #e0e0e0;
+}
+
+
+
+
+
+
+
 @media only screen and (max-width: 600px){
     .navbar__menu_container .user__icon{
         display: flex;
@@ -54,6 +102,28 @@
     .link {
         display: none;
         
+    }
+    .hero__section {
+        height: 80vh;
+    }    
+    .content__herosection{
+        height: calc(80vh - 60px);
+    }
+    .hero__section_input_container{
+        background-color:transparent;
+        flex-wrap: wrap;
+        flex-direction: column;
+        width: 100%;
+    }
+    .input_container_search{
+        border-radius: 8px;
+        padding: 10px;
+    }
+    .input_container_location,
+    .input_container_search{
+        border-radius: 8px;
+        padding: 10px;
+        width: 95%;
     }
 
 }
