--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,126 @@
     border-right: 2px solid #e0e0e0;
 }
 
+.container{
+    margin: 3rem auto;
+    width: 90%;
+}
+.we__offer{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+}
+.we--offer-card{
+    border-radius: 10px;
+    overflow: hidden;
+    border: #e0e0e0 solid 1px;
+    transition: all 0.3s ease;
+}
+.we--offer-card img{
+    width: 100%;
+    height: 160px;
+    object-fit: cover;
+    object-position: center;
+}
+.we__offer_content{
+    padding: 10px;
+}
+.we__offer_content h2{
+    /* text-align: ; */
+    font-size: 20px;
+    font-weight: 400;
+}
+.we__offer_content p {
+    font-size: 12px;
+}
+.we--offer-card:hover{
+    transform: scale(1.05);
+}
+
+
+.our_collection h1{
+    font-weight: 600;
+}
+.our_collection__tagline{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.our_collection__tagline span{
+    font-size: 15px;
+    color: #1a1818;
+}
+.our_collection__tagline span p{
+    cursor: pointer;
+    color: #ff7e8b;
+}
+.our_collection_cards{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1.5rem;
+   
+}
+.our_collection_cards >.card{
+    min-width: 240px;
+    height: 300px;
+    position: relative;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+}
+.cards__1{
+    background: url(images/collection3.jpg);
+}
+.cards__2{
+    background: url(images/collection4.jpg);
+}
+.cards__3{
+    background: url(images/collection2.jpg);
+}
+.cards__4{
+    background: url(images/collection1.jpg);
+}
+.overlay{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 10px;
+    background: linear-gradient(
+        0deg,
+        rgba(0, 0, 0 ,0.9) 0%,
+        rgba(0, 0, 0 ,0.5) 50%,
+        rgba(0, 0, 0 ,0.5) 85%
+    );
+}
+.our_collection_cards .card .content{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    color: #e0e0e0;
+    padding: 12px 16px;
+    font-size: 0.9rem;
+}
+.content h4{
+    font-weight: 400;
+    letter-spacing: 0.5px;
+}
+.content p{
+    cursor: pointer;
+}
+
+
+
+
+
+
+
 
 
 
