--- a/styles.css
+++ b/styles.css
@@ -304,7 +304,7 @@
     margin: auto;
     width: 80%;
     flex-wrap: wrap;
-    
+    gap: 2.5rem;
 }
 .footer_section1 img{
     width: 120px;
@@ -457,4 +457,22 @@
         width: 90%;
         flex-direction: column;
     }
+}
+@media only screen and (max-width: 900px){
+    .navigation__container{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+}
+@media only screen and (max-width: 600px){
+    .navigation__container{
+        grid-template-columns: 1fr 1fr ;
+    }
+    
+}
+@media only screen and (max-width: 400px){
+    .navigation__container{
+        grid-template-columns: 1fr ;
+    }
+    
 }
